--- a/index.html
+++ b/index.html
@@ -1,183 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ducoment2</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>INANCE Services</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="headr">
-        <div class="contact"><i class="fa-solid fa-phone" style="color: orangered;"></i> Call : +01 123455678990</div>
-        <div class="email"><i  class="fa-solid fa-envelope" style="color: orangered;"></i> Email : demo@gmail.com</div>
-    </div>
 
-    <div class="all">
-        <div class="logo">INANCE</div>
-        <div class="nav">
-            <section class="hero">
-                <h1>Repair and <br>Maintenance <br> Services</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum voluptatem adipisci Lorem ipsum, dolor sit amet consectetur  adipisicing elit. Ea, eveniet id? Quaerat qui omnis amet illum alias rerum eligendi</p>
-                <button class="btn">CONTACT US</button>
-            </section>
-            <img class="img" src="./image1.png-removebg.png" alt="image">
-            <div class="ss"><a href="#">Home</a></div>
-            <div class="ss"><a href="#">About</a></div>
-            <div class="ss"><a href="#">Services</a></div>
-            <div class="ss"><a href="#">Contact Us</a></div>
-        </div>
-    </div>
-    <div class="articles">
-        <div class="article">
-            <i id="icon" class="fa-solid fa-house"></i>
-            <h3>REPAIR</h3>
-        </div>
-        <div class="article">
-            <i id="icon" class="fa-solid fa-plug"></i>
-            <h3>IMPROVE</h3>
-        </div>
-        <div class="article">
-            <i id="icon" class="fa-solid fa-toilet"></i>
-            <h3>MAINTAIN</h3>
-        </div>
-    </div>
+<header class="nav">
+    <h2 class="logo">INANCE</h2>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#services">Services</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+    </nav>
+</header>
 
-    <div class="all2">      
-        <div class="text">
-            <h2 class="title">ABOUT US</h2>
-            <p class="p2">There is many variations of passages of Lorem ipusm avaible. but the majority have suffered alteration in some form. by injected humor, or randomised There is many variations of passages of Lorem ipusm avaible. but the majority have suffered alteration in some form. by injected humor</p>
-            <button class="btn2">READ MORE</button>
+<section class="hero">
+    <div class="hero-text">
+        <h1>Professional Repair Services</h1>
+        <p>Fast, reliable and affordable maintenance for your home</p>
+        <button class="btn">Get Service</button>
+    </div>
+    <div class="hero-img">
+        <img src="professional-img.png" alt="">
+    </div>
+</section>
+
+<section id="services" class="services">
+    <h2>Our Services</h2>
+    <div class="cards">
+        <div class="card">
+            <h3>Repair</h3>
+            <p>We fix plumbing, electricity and home problems.</p>
         </div>
-        <div class="img">
-            <img class="ss" src="./workwear-overall-outerwear-apron-personal-protective-equipment-denim-1620918-pxhere.com.jpg" alt="img2">
+        <div class="card">
+            <h3>Maintenance</h3>
+            <p>Keep everything working perfectly.</p>
+        </div>
+        <div class="card">
+            <h3>Installation</h3>
+            <p>Professional installation of equipment.</p>
         </div>
     </div>
+</section>
 
-    <div class="all3">
-        <div class="image-section">
-            <img src="./professional-img.png" alt="Professional worker">
+<section id="about" class="about">
+    <div class="about-img">
+        <img src="image1.png-removebg.png" alt="">
+    </div>
+    <div class="about-text">
+        <h2>We Are Experts</h2>
+        <p>Our professional team provides high quality home services with quick response and affordable prices.</p>
+        <button class="btn">Learn More</button>
+    </div>
+</section>
+
+<section class="testimonials">
+    <h2>Clients Feedback</h2>
+    <div class="reviews">
+        <div class="review">
+            <img src="business-1839191_640.webp">
+            <p>"Amazing service and friendly workers!"</p>
+            <span>- Jorch Morik</span>
         </div>
-
-        <div class="text2">
-            <h2 class="title2">WE PROVIDE PROFESSIONAL <br> HOME SERVICES.</h2>
-            <p class="p3">randomised words which don't look even slightly believable. if you are going to <br> use a passage of lorem ipsum, you need to be sure there isn't anything emabarrasing <br> hidden in the middle of text. All randomised words which don't look even slightly</p>
-            <button class="btn3">READ MORE</button>
+        <div class="review">
+            <img src="cheerful-young-caucasian-businessman_171337-727.webp">
+            <p>"Very fast and professional team!"</p>
+            <span>- Adam Smith</span>
         </div>
     </div>
-    
-    <div class="all4">
-        <section class="news-section">
-            <h1 class="our">OUR SERVICES</h1>
-            <div class="articles-container2">
-                <div class="article2">
-                    <i id="icon2" class="fa-solid fa-screwdriver-wrench"></i>
-                    <h3>Maintenence</h3>
-                    <p>when looking at it ayout. The point of using <br> Lorem lpusm is that it has a more-or-less <br> normal</p>
-                </div>
-                <div class="article2">
-                    <i id="icon2"  class="fa-solid fa-plug"></i>
-                    <h3>Electrical</h3>
-                    <p>when looking at it ayout. The point of using <br> Lorem lpusm is that it has a more-or-less <br> normal</p>
-                </div>
-                <div class="article2">
-                    <i id="icon2" class="fa-solid fa-toilet"></i>
-                    <h3>Plumbing</h3>
-                    <p>when looking at it ayout. The point of using <br> Lorem lpusm is that it has a more-or-less <br> normal</p>
-                </div>
-            </div>
-            <input class="btn4" type="button" value="VIEW MORE">
-        </section>
-    </div>
-    
-    <div class="all5">
-        <h2 class="what">WHAT OUR CLIENTS SAY</h2>
-        <div class="cardss">
-            <div class="card_1">
-                <img src="./business-1839191_640.webp" alt="Client 1" class="client-photo">
-                <div class="info">
-                    <h3>Jorch Morik</h3>
-                    <div class="stars">★★★★★</div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sequi magni rem tempore, quis quam est, error minima eligendi unde laboriosam perspiciatis officia possimus velit suscipit! A illum odio quaerat!</p>
-                </div>
-                <span class="quote-icon">“</span>
-            </div>
+</section>
 
-            <div class="card_1">
-                <img src="./Businessman-PNG.webp" alt="Client 1" class="client-photo">
-                <div class="info">
-                    <h3>Jorch Morik</h3>
-                    <div class="stars">★★★★★</div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sequi magni rem tempore, quis quam est, error minima eligendi unde laboriosam perspiciatis officia possimus velit suscipit! A illum odio quaerat!</p>
-                </div>
-                <span class="quote-icon">“</span>
-            </div>
-        </div>
-        <div class="buttons">
-            <button class="nav-button">&larr;</button>
-            <button class="nav-button">&rarr;</button>
-        </div>
-    </div>
+<section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <form>
+        <input type="text" placeholder="Name">
+        <input type="email" placeholder="Email">
+        <textarea placeholder="Message"></textarea>
+        <button class="btn">Send Message</button>
+    </form>
+</section>
 
-    <div class="all6">
-        <div class="inputs">
-            <h1 class="contactus">CONTACT US</h1>
-            <div class="formule">
-                <form action="#" method="post">
-                    <input type="text" placeholder="Name" name="name" required>
-                    <input type="tel" placeholder="Phone Number" name="phone" required>
-                    <input type="email" placeholder="Email" name="email" required>
-                    <textarea placeholder="Message" name="message" required></textarea>
-                    <button type="submit">SEND</button>
-                </form>
-                <div class="map">
-                    <iframe   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509371!2d144.95373531531033!3d-37.81627917975159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xfb1b8e1e5f015f5!2sOld%20City%20Hall%20Station!5e0!3m2!1sen!2s!4v1606386780376!5m2!1sen!2s"
-                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
+<footer>
+    © 2026 INANCE | All rights reserved
+</footer>
 
-    <footer class="footer">
-        <div class="all7">
-            <h3 class="get">GET IN TOUCH</h3>
-            <div class="d-flex justify-content-center">
-                <div class="contact-item">
-                    <div class="icon3">
-                        <i class="bi bi-geo-alt" id="logoo"></i>
-                    </div>
-                    <p>Lorem Ipsum is simply dummy text</p>
-                </div>
-                <div class="contact-item">
-                    <div class="icon3">
-                        <i class="bi bi-telephone" id="logoo"></i>
-                    </div>
-                    <p>+02 1234567890</p>
-                </div>
-                <div class="contact-item">
-                    <div class="icon3">
-                        <i class="bi bi-envelope" id="logoo"></i>
-                    </div>
-                    <p>demo@gmail.com</p>
-                </div>
-            </div>
-            <h3 class="flw">FOLLOW US</h3>
-            <div class="social-icons">
-                <a href="#"><i class="bi bi-facebook"></i></a>
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-youtube"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-            </div>
-            <div class="divider"></div>
-            <div class="copyright">
-                &copy; 2024 All Rights Reserved By Free HTML Templates
-            </div>
-        </div>
-    </footer>
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/463c2a14cc.js" crossorigin="anonymous"></script>
 </body>
 </html>
